--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wren-8080",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "An Intel 8080 disassembler",
   "main": "index.js",
   "bin": "cli/cli.js",
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "commander": "^2.15.1",
+    "dedupe": "^2.1.0",
     "jsonexport": "^2.2.0"
   }
 }
